--- a/agents/ply-to-agent.html
+++ b/agents/ply-to-agent.html
@@ -101,8 +101,8 @@
 							
 							'012',	// 10:SKIRT LEVEL 1
 							'021',	// 11:SKIRT LEVEL 2
-							'210',	// 12:SKIRT LEVEL 3
 							
+							'210',	// 12---unused
 							'121',	// 13---unused
 							'011',	// 14---unused
 							'001',	// 15---unused
