--- a/covid-19-configurator.html
+++ b/covid-19-configurator.html
@@ -86,6 +86,12 @@
 		import './configurator/health.js';
 		import './configurator/misc.js';
 	
+		function onInputNumericSlider( event )
+		{
+			console.log( event );
+		}
+
+
 		CFG.processTags();
 		
 		toggleFav = CFG.toggleFav;
@@ -106,6 +112,14 @@
 		var elems = document.querySelectorAll( 'select.filter' );
 		for( var elem of elems )
 			elem.addEventListener( 'change', CFG.toggleFilter );
+			
+		var elems = document.querySelectorAll( 'input.slider' );
+		for( var elem of elems )
+		{
+			var id = elem.getAttribute( 'id' );
+			elem.addEventListener( 'input', CFG.onInputNumericSlider );			
+			elem.dispatchEvent( new Event('input',{bubbles: true}) );
+		}
 			
 		document.getElementById( 'start_button_1' ).onclick = CFG.prepareValues;
 		document.getElementById( 'start_button_2' ).onclick = CFG.prepareValues;
